# gxng

./: CMakeLists.txt
graphics/: Action.h  AutoBinder.h  CMakeLists.txt  ElementBuffer.cpp  ElementBuffer.h  ElementBuffer.ipp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.ipp  Window.cpp  Window.h  gxng_graphics.h
input/: CMakeLists.txt  KeyInput.cpp  KeyInput.h  MouseInput.cpp  MouseInput.h  gxng_input.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
math/: CMakeLists.txt  Mat.h  Mat.ipp  Vec.h  Vec.ipp  gxng_math.cpp  gxng_math.h  utility.h  utility.ipp
